k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatcher-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatcher
  template:
    metadata:
      labels:
        app: dispatcher
    spec:
      containers:
      - name: dispatcher
        image: dispatcher:latest
        ports:
        - containerPort: 6001
          name: server
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /products/live
            port: server
          initialDelaySeconds: 10
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /products/ready
            port: server
          initialDelaySeconds: 10
          periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: dispatcher
spec:
  type: ClusterIP
  ports:
  - port: 6001
    targetPort: server
  selector:
    app: dispatcher
