k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatcher
  template:
    metadata:
      labels:
        app: dispatcher
    spec:
      containers:
      - name: dispatcher
        image: ghcr.io/multimoml/dispatcher:latest
        ports:
        - containerPort: 6001
          name: server
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /products/live
            port: server
          initialDelaySeconds: 30
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /products/ready
            port: server
          initialDelaySeconds: 30
          periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: dispatcher
spec:
  type: ClusterIP
  ports:
  - port: 6001
    targetPort: server
  selector:
    app: dispatcher

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dispatcher
  namespace: default

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`multimo.ml`) && PathPrefix(`/products/`)
      kind: Rule
      services:
        - name: dispatcher
          port: 6001
